@@ -1,5 +1,9 @@
 2008-04-16  Matthias Clasen  <mclasen@redhat.com>
 
+	* Sync xdgmime to the copy in gio.
+
+2008-04-16  Matthias Clasen  <mclasen@redhat.com>
+
 	Partically revert the last commit after realizing that
 	xdg_mime_media_type_equal doesn't have to init at all.
 
